initial commit of key-value-store

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Ionut Ieremie <Ionut.Ieremie@continental-corporation.com>
 Guy Sagnes <Guy.Sagnes@continental-corporation.com>
 Petrica Manoila <Petrica.Manoila@continental-corporation.com>
+Simon Disch <simon.disch@xse.de>
