PCO Vers. 1.0.2 - Updated protected IF persComTypes.h : Allow support of the standard C99 instead of redeclaration.
Change-Id: Ie62e2c6466fc73c2d054c115627a2387db3eb964
Signed-off-by: Petrica Manoila <petrica.manoila@continental-corporation.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 persistence-common-object ChangeLog
 ===================================
 
+Version 1.0.2 16.09.2014
+------------------------
+1.	Updated protected IF persComTypes.h :
+	- Allow support of the standard C99 instead of redeclaration.
+2.	Separated lib version from package version in configuration.
+
 Version 1.0.1 25.08.2014
 ------------------------
 
